# pyxml2xpath

./: .gitignore  .project  .pydevproject  README.md  VERSION  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
src/xml2xpath/: xml2xpath.py
tests/: test_01.py
tests/resources/: html5-small.html.xml  simple-anon-ns.xml  simple-no-ns.xml  simple-ns-rev-order.xml  simple-ns.xml
